style.css
:root {
    --dark-orchid: #A64AC9;
    --tangerine-yellow: #FCCD04;
    --bright-turquoise: #17E9E0;
    --peach: #FFB48F;
    --biscuit: #F5E6CC;
    --blue-violet: #8a2be2;
  }

html {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    border: 0;
    height: 100%;
    width: 100%;
    background: linear-gradient(to right bottom, var(--peach) 50%, var(--biscuit) 50%);
    background-repeat: no-repeat;
    background-attachment: fixed;
    text-align: center;
    font-family: 'Poppins', sans-serif;
    color: var(--blue-violet);
}

.grid-container {
    display: grid;
    justify-content: center;
    height: 100%;
    width: 100%;
}

.grid-item {
    display: grid;
    /* align-self: center; */
    width: 500px;
    height: 200px;
    background-color: #FFF;
    margin-top: 4px;
    /* padding: 15px 15px 45px; */
    border-radius: 8px;
}

h1 {
    font-family: 'Space Grotesk', sans-serif;
    font-size: 2.4rem;
}

hr {
    border: 0;
    height: 2px;
    margin-top: 30px;
    margin-bottom: 20px;
    background-color: var(--blue-violet);
}

.boardgame-search {
    width: 500px;
}

#boardgame-searchfield {
    width: 60%;
    padding: 7px 3px;
    border-width: 1.6px;
    border-radius: 3px;
}

#boardgame-searchfield:focus { 
    outline: none;
    border-color: var(--dark-orchid);
    box-shadow: 0 0 10px var(--dark-orchid);
}
textarea:focus { 
    outline: none;
    border-color: var(--dark-orchid);
    box-shadow: 0 0 10px var(--dark-orchid);
}

.button {
    background-color: var(--dark-orchid);
    color: #FFF;
    margin-left: 2px;
    padding: 8px 12px;
    border: none;
    border-radius: 3px;
}

.button:hover {
    background-color: var(--blue-violet);
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
  }
  
/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #FFF;
    border-radius: 8px;
    min-width: 500px;
    max-height: 636px;
    overflow-y: scroll;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    margin-top: 40px;
}
  
/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}
  
/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: var(--peach);}
  
/* Show or hide the dropdown menu with JS */
.show {display:block;}

.purple-block {
    display: block;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 8px;
    padding-bottom: 8px;
    color: #FFF;
    background-color: var(--dark-orchid);
}

